--- a/indexAdmin.html
+++ b/indexAdmin.html
@@ -70,7 +70,7 @@
         <div class="container-ul">
           <ul class="container-icons">
             <li class="active li-acessa">
-              <a class="edit-text_a" href="Telalogin.html"><span class="bi bi-box-arrow-right"></span></a>
+              <a class="edit-text_a" href="index.html"><span class="bi bi-box-arrow-right"></span></a>
             </li>
           </ul>
           <span class="container-icons_span">Logoff</span>
