--- a/indexPersona.html
+++ b/indexPersona.html
@@ -35,7 +35,7 @@
                     <a id="nav-perfil_persona"><span class="fa fa-user"></span> Perfil</a>
                 </li>
                 <li class="li-acessa">
-                    <a href="Telalogin.html"><span class="bi bi-box-arrow-right"></span> Logoff</a>
+                    <a href="index.html"><span class="bi bi-box-arrow-right"></span> Logoff</a>
                 </li>
               </ul>
           </div>
