--- a/Telacadastro.html
+++ b/Telacadastro.html
@@ -40,7 +40,7 @@
 								</div>
 
                                 <div class="form-group">
-                                    <input type="text" class="form-control" name="criar_usuarioCPF" id="cpfAdmin" placeholder="CPF" required>
+                                    <input type="text" class="form-control" name="criar_usuarioCPF" id="cpf" placeholder="CPF" required>
                                 </div>
                                 <div class="form-group">
                                     <input type="text" class="form-control" name="criar_usuarioMatricula" placeholder="Matricula">
